--- a/les-4/ex-flex/ex-2/style.css
+++ b/les-4/ex-flex/ex-2/style.css
@@ -5,6 +5,7 @@
 body {
     margin: 0;
     font-family: sans-serif;
+    background-color: lightgray;
 }
 
 header {
@@ -16,6 +17,7 @@ header {
     width: 1000px;
     margin: auto;
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
     padding: 4px;
@@ -44,4 +46,59 @@ header {
 
 .nav-item.active a {
     border-color: darkblue;
+}
+
+.bottom-header {
+    text-align: center;
+    padding: 150px 0;
+    width: 1000px;
+    margin: auto;
+}
+
+.bottom-header h1 {
+    margin: 10px 0;
+}
+
+.bottom-header p {
+    margin: 5px 0;
+}
+
+.banner {
+    background-color: white;
+    padding: 22px;
+    text-align: center;
+    margin-bottom: 24px;
+}
+
+.banner p {
+    margin: 0;
+}
+
+.card-container {
+    width: 1024px;
+    margin: auto;
+    display: flex;
+    /* justify-content: space-between; */
+    margin-bottom: 500px;
+    align-items: flex-start;
+}
+
+.card {
+    /* width: calc((100% - 48px) / 3); */
+    background-color: white;
+    flex-grow: 1;
+    margin: 12px;
+    padding: 20px;
+}
+
+.card-image {
+    display: flex;
+    justify-content: center;
+}
+
+.card-image img {
+    display: block;
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
 }
