--- a/les-4/ex-flex/ex-2/style.css
+++ b/les-4/ex-flex/ex-2/style.css
@@ -79,7 +79,6 @@ header {
     margin: auto;
     display: flex;
     /* justify-content: space-between; */
-    margin-bottom: 500px;
     align-items: flex-start;
 }
 
@@ -101,4 +100,86 @@ header {
     height: 100px;
     width: 100px;
     border-radius: 50%;
+}
+
+.text-banner {
+    width: 1000px;
+    margin: auto;
+    padding: 0 150px;
+}
+
+.grid {
+    width: 1000px;
+    margin: auto;
+}
+
+.grid-row {
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.grid-col {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.grid-item {
+    background-color: white;
+    border-radius: 5px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+.grid-item p {
+    margin: 0;
+    line-height: 1.25;
+}
+
+.grid-item p + p {
+    margin-top: 20px;
+}
+
+.grid-item .title {
+    font-size: 30px;
+    font-weight: 600;
+}
+
+.grid-item .subtitle {
+    font-size: 18px;
+    margin-bottom: 20px;
+}
+
+.grid-item .image {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+
+.grid-item .image img {
+    display: block;
+    width: 100%;
+}
+
+.grid-col > .grid-item-half {
+    height: calc(50% - 10px);
+}
+
+.grid-row > .grid-item-half {
+    width: calc(50% - 10px);
+}
+
+.grid-row > .grid-item-1 {
+    width: calc((100% - 40px) / 3);
+}
+
+.grid-row > .grid-item-2 {
+    width: calc(((100% - 40px) / 3 * 2) + 20px);
+}
+
+footer {
+    background-color: white;
 }
