--- a/les-6/ex-1/style.css
+++ b/les-6/ex-1/style.css
@@ -180,6 +180,15 @@ header {
     width: calc(((100% - 40px) / 3 * 2) + 20px);
 }
 
-footer {
-    background-color: white;
+@media screen and (max-width: 1000px) {
+    .top-header,
+    .bottom-header,
+    .text-banner,
+    .grid {
+        width: 800px;
+    }
+
+    .card-container {
+        width: 824px;
+    }
 }
