--- a/les-6/ex-1/style.css
+++ b/les-6/ex-1/style.css
@@ -37,6 +37,37 @@ header {
     display: flex;
 }
 
+.nav-mobile {
+    /* vanaf 565px display flex */
+    display: none;
+    height: 24px;
+    width: 30px;
+    position: relative;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.nav-mobile .hamburger {
+    width: 100%;
+    height: 4px;
+    background-color: white;
+    /* position: absolute; */
+    border-radius: 2px;
+}
+
+/* .nav-mobile .hamburger-top {
+    top: 0;
+}
+
+.nav-mobile .hamburger-middle {
+    top: 50%;
+    margin-top: -2px;
+}
+
+.nav-mobile .hamburger-bottom {
+    bottom: 0;
+} */
+
 .nav-item a {
     color: white;
     text-decoration: none;
@@ -106,6 +137,7 @@ header {
     width: 1000px;
     margin: auto;
     padding: 0 150px;
+    text-align: center;
 }
 
 .grid {
@@ -193,7 +225,7 @@ header {
     }
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 824px) {
     .top-header,
     .bottom-header,
     .text-banner,
@@ -207,11 +239,42 @@ header {
 
     .grid-row {
         flex-direction: column;
+        margin-bottom: 0;
     }
 
     .grid-row > .grid-item-half,
     .grid-row > .grid-item-1,
     .grid-row > .grid-item-2 {
         width: 100%;
+    }
+
+    .grid-item {
+        margin-bottom: 20px;
+    }
+}
+
+@media screen and (max-width: 624px) {
+    .top-header,
+    .bottom-header,
+    .text-banner,
+    .grid {
+        width: 100%;
+        padding-left: 12px;
+        padding-right: 12px;
+    }
+
+    .card-container {
+        width: 100%;
+        display: block;
+    }
+}
+
+@media screen and (max-width: 565px) {
+    .nav {
+        display: none;
+    }
+
+    .nav-mobile {
+        display: flex;
     }
 }
